--- a/example/test-network-k8s/kube/cfg-placement-center.yaml
+++ b/example/test-network-k8s/kube/cfg-placement-center.yaml
@@ -23,7 +23,7 @@ data:
 
     [node]
     node_id = 1
-    nodes = { 1 = "127.0.0.1:1228"}
+    nodes = { 1 = "localhost:1228"}
 
     [network]
     grpc_port = 1228
