--- a/example/mqtt-cluster/mqtt-server/node-1.toml
+++ b/example/mqtt-cluster/mqtt-server/node-1.toml
@@ -15,10 +15,10 @@
 cluster_name = "mqtt-broker"
 broker_id = 1
 grpc_port = 9981
-placement_center = ["localhost:1228"]
+placement_center = ["127.0.0.1:1228"]
 
 [network]
-local_ip = "localhost"
+local_ip = "127.0.0.1"
 tcp_port = 1883
 tcps_port = 8883
 websocket_port = 8093
@@ -44,7 +44,7 @@ storage_type = "placement"
 enable = true
 model = "pull"
 port = 9090
-push_gateway_server = "localhost:8081"
+push_gateway_server = "127.0.0.1:8081"
 interval = 10
 header = ""
 
@@ -63,4 +63,4 @@ log_path = "./robust-data-test/mqtt-broker-1/logs"
 [telemetry]
 enable = false
 exporter_type = "otlp"
-exporter_endpoint = "grpc://localhost:4317"
+exporter_endpoint = "grpc://127.0.0.1:4317"
