--- a/Cargo.toml
+++ b/Cargo.toml
@@ -173,9 +173,8 @@ metadata-struct = { path = "src/common/metadata-struct" }
 third-driver = { path = "src/common/third-driver" }
 protocol = { path = "src/protocol" }
 robustmq-test = { path = "tests" }
-robustmq-proto-build = { git = "https://github.com/HeartLinked/robustmq-proto.git", branch = "dev-copilot-list-3" }
+robustmq-proto-build = { git = "https://github.com/robustmq/robustmq-proto.git", branch = "main" }
 pprof-monitor = { path = "src/common/pprof-monitor" }
-
 
 # other
 tempfile = "3.9.0"
