feat: add system_mintor config

--- a/config/mqtt-server.toml
+++ b/config/mqtt-server.toml
@@ -54,6 +54,14 @@ runtime_worker_threads = 4
 default_user = "admin"
 default_password = "pwd123"
 
+[system_monitor]
+enable = true
+os_cpu_check_interval_ms = 60
+os_cpu_high_watermark = 70.0
+os_cpu_low_watermark = 50.0
+os_memory_check_interval_ms = 60
+os_memory_high_watermark = 80.0
+
 [offline_messages]
 enable = true
 expire_ms = 3600
