--- a/Cargo.toml
+++ b/Cargo.toml
@@ -176,7 +176,8 @@ protocol = { path = "src/protocol" }
 robustmq-test = { path = "tests" }
 robustmq-proto-build = { git = "https://github.com/robustmq/robustmq-proto.git", branch = "main" }
 pprof-monitor = { path = "src/common/pprof-monitor" }
-
+sysinfo = "0.29.10"
+chrono = "0.4.41"
 # other
 tempfile = "3.9.0"
 humantime = "2.2.0"
