feat: initialize the pkg macro in robustmq
Signed-off-by: shyunny <shyunny@outlook.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ members = [
     "src/journal-server",
     "src/journal-client",
     "src/storage-adapter",
+    "src/robustmq-macro",
     "tests",
 ]
 
