update example config files

--- a/config/log-config/mqtt-tracing.toml
+++ b/config/log-config/mqtt-tracing.toml
@@ -33,3 +33,7 @@ directory = "./logs/tests"
 prefix = "mqtt-slow_sub-"
 suffix = "log"
 max_log_files = 10
+
+[tokio-console]
+kind = "TokioConsole"
+bind = "127.0.0.1:5675"
