--- a/config/log-config/place-tracing.toml
+++ b/config/log-config/place-tracing.toml
@@ -24,3 +24,7 @@ directory = "./logs/tests"
 prefix = "place-server-"
 suffix = "log"
 max_log_files = 10
+
+[tokio-console]
+kind = "TokioConsole"
+bind = "127.0.0.1:5674"
