--- a/config/log-config/mqtt-tracing.toml
+++ b/config/log-config/mqtt-tracing.toml
@@ -34,6 +34,6 @@ prefix = "mqtt-slow_sub-"
 suffix = "log"
 max_log_files = 10
 
-[tokio-console]
+[tokio_console]
 kind = "TokioConsole"
 bind = "127.0.0.1:5675"
