refactor: Initial impl of configuring `tokio-console` support thru config file (#1138)
* separating logging appenders into sub mods

* impl create_appender

* re-org logging appender

* update example config files

* clippy & fmt

* refactor creation of fmt layer

* make WorkerGuard optional

* enable tokio console layer thru config file

* clippy & fmt

* update example config files

* update docs

* add license header

--- a/config/log-config/mqtt-tracing.toml
+++ b/config/log-config/mqtt-tracing.toml
@@ -12,11 +12,11 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-[appenders.stdout]
+[stdout]
 kind = "Console"
 level = "Warn"
 
-[appenders.server]
+[server]
 kind = "RollingFile"
 level = "Info"
 rotation = "Minutely"
@@ -25,7 +25,7 @@ prefix = "mqtt-server-"
 suffix = "log"
 max_log_files = 10
 
-[appenders.slow_sub]
+[slow_sub]
 kind = "RollingFile"
 level = "Info"
 rotation = "Minutely"
@@ -33,3 +33,7 @@ directory = "./logs/tests"
 prefix = "mqtt-slow_sub-"
 suffix = "log"
 max_log_files = 10
+
+[tokio_console]
+kind = "TokioConsole"
+bind = "127.0.0.1:5675"
