--- a/example/single-mqtt-cluster/journal-server/journal-tracing.toml
+++ b/example/single-mqtt-cluster/journal-server/journal-tracing.toml
@@ -12,11 +12,11 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-[appenders.stdout]
+[stdout]
 kind = "Console"
 level = "Info"
 
-[appenders.server]
+[server]
 kind = "RollingFile"
 level = "Info"
 rotation = "Minutely"
