--- a/src/robustmq-macro/Cargo.toml
+++ b/src/robustmq-macro/Cargo.toml
@@ -26,6 +26,13 @@ syn = { version = "2", features = ["full"] }
 quote = "1"
 proc-macro2 = "1"
 
+[dev-dependencies]
+macrotest = "1.1.0"
+trybuild = "1.0"
+prost-validate = { workspace = true, features = ["derive"] }
+async-trait = { version = "0.1.88" }
+tonic.workspace = true
+
 [features]
 validate-req = []
 unstable = ["validate-req"]
