--- a/config/log-config/mqtt-tracing.toml
+++ b/config/log-config/mqtt-tracing.toml
@@ -19,22 +19,31 @@ level = "Warn"
 [server]
 kind = "RollingFile"
 level = "Info"
-rotation = "Minutely"
-directory = "./logs/tests"
-prefix = "mqtt-server-"
+rotation = "Daily"
+directory = "./data/mqtt-broker/logs"
+prefix = "server"
+suffix = "log"
+max_log_files = 10
+
+[server_error]
+kind = "RollingFile"
+level = "Warn"
+rotation = "Daily"
+directory = "./data/mqtt-broker/logs"
+prefix = "error"
 suffix = "log"
 max_log_files = 10
 
 [slow_sub]
 kind = "RollingFile"
 level = "Info"
-rotation = "Minutely"
-directory = "./logs/tests"
-prefix = "mqtt-slow_sub-"
+rotation = "Daily"
+directory = "./data/mqtt-broker/logs"
+prefix = "slow-sub"
 suffix = "log"
 max_log_files = 10
 
 ## Uncomment the section below to enable troubleshooting with `tokio-console`.
-# [tokio_console]
-# kind = "TokioConsole"
-# bind = "127.0.0.1:5675"
+[tokio_console]
+kind = "TokioConsole"
+bind = "127.0.0.1:5675"
