--- a/config/log-config/place-tracing.toml
+++ b/config/log-config/place-tracing.toml
@@ -19,13 +19,13 @@ level = "Info"
 [server]
 kind = "RollingFile"
 level = "Info"
-rotation = "Minutely"
-directory = "./logs/tests"
-prefix = "place-server-"
+rotation = "Daily"
+directory = "./data/placement-center/logs"
+prefix = "server"
 suffix = "log"
 max_log_files = 10
 
 ## Uncomment the section below to enable troubleshooting with `tokio-console`.
-# [tokio_console]
-# kind = "TokioConsole"
-# bind = "127.0.0.1:5674"
+[tokio_console]
+kind = "TokioConsole"
+bind = "127.0.0.1:5674"
