--- a/src/cli-command/Cargo.toml
+++ b/src/cli-command/Cargo.toml
@@ -25,6 +25,7 @@ axum.workspace = true
 thiserror.workspace = true
 grpc-clients.workspace = true
 common-base.workspace = true
+common-config.workspace = true
 metadata-struct.workspace = true
 protocol.workspace = true
 serde_json.workspace = true
