--- a/config/mqtt-server.toml
+++ b/config/mqtt-server.toml
@@ -29,9 +29,9 @@ tls_key = "./config/example/certs/key.pem"
 
 [network_thread]
 accept_thread_num = 10
-handler_thread_num = 15
+handler_thread_num =30
 response_thread_num = 10
-max_connection_num = 2000
+max_connection_num = 5000000
 request_queue_size = 2000
 response_queue_size = 2000
 lock_max_try_mut_times = 30
