feat: add grpc-web support for console-subscribe
Signed-off-by: shyunny <shyunny@outlook.com>

--- a/example/single-mqtt-cluster/mqtt-server/mqtt-tracing.toml
+++ b/example/single-mqtt-cluster/mqtt-server/mqtt-tracing.toml
@@ -34,3 +34,8 @@ directory = "./logs"
 prefix = "mqtt-slow_sub-"
 suffix = "log"
 max_log_files = 10
+
+[tokio_console]
+kind = "TokioConsole"
+bind = "0.0.0.0:9999"
+grpc_enable = true
