--- a/config/mqtt-server.toml
+++ b/config/mqtt-server.toml
@@ -32,8 +32,7 @@ accept_thread_num = 32
 handler_thread_num =62
 response_thread_num = 32
 max_connection_num = 5000000
-request_queue_size = 2000
-response_queue_size = 2000
+queue_size = 1000
 lock_max_try_mut_times = 30
 lock_try_mut_sleep_time_ms = 50
 
