--- a/example/single-mqtt-cluster/mqtt-server/mqtt-server.toml
+++ b/example/single-mqtt-cluster/mqtt-server/mqtt-server.toml
@@ -36,6 +36,7 @@ request_queue_size = 2000
 response_queue_size = 2000
 lock_max_try_mut_times = 30
 lock_try_mut_sleep_time_ms = 50
+queue_size = 10
 
 [auth_storage]
 storage_type = "placement"
