--- a/Cargo.toml
+++ b/Cargo.toml
@@ -185,7 +185,7 @@ tempfile = "3.9.0"
 humantime = "2.2.0"
 strum = "0.27"
 strum_macros = "0.27"
-
+async-stream = "0.3.6"
 
 #pprof
 pprof = { version = "0.14.0", features = ["flamegraph"] }
