--- a/example/mqtt-cluster/mqtt-server/node-1.toml
+++ b/example/mqtt-cluster/mqtt-server/node-1.toml
@@ -14,53 +14,61 @@
 
 cluster_name = "mqtt-broker"
 broker_id = 1
-grpc_port = 9981
+grpc_port = 1981
 placement_center = ["127.0.0.1:1228"]
 
-[network]
+[network_port]
 local_ip = "127.0.0.1"
 tcp_port = 1883
-tcps_port = 8883
-websocket_port = 8093
-websockets_port = 8094
-quic_port = 9083
+tcps_port = 1884
+websocket_port = 1093
+websockets_port = 1094
+quic_port = 1083
 tls_cert = "./config/example/certs/cert.pem"
 tls_key = "./config/example/certs/key.pem"
 
-[tcp_thread]
-accept_thread_num = 1
-handler_thread_num = 10
-response_thread_num = 1
-max_connection_num = 1000
-request_queue_size = 2000
-response_queue_size = 2000
+[network_thread]
+accept_thread_num = 32
+handler_thread_num = 62
+response_thread_num = 32
+max_connection_num = 5000000
+queue_size = 1000
 lock_max_try_mut_times = 30
 lock_try_mut_sleep_time_ms = 50
 
-[auth]
+[auth_storage]
 storage_type = "placement"
 
 [prometheus]
 enable = true
 model = "pull"
-port = 9090
+port = 1091
 push_gateway_server = "127.0.0.1:8081"
 interval = 10
 header = ""
 
 [system]
-runtime_worker_threads = 128
+heartbeat_timeout = "10s"
+runtime_worker_threads = 4
 default_user = "admin"
 default_password = "pwd123"
+
+[system_monitor]
+enable = true
+os_cpu_check_interval_ms = 60000
+os_cpu_high_watermark = 70.0
+os_cpu_low_watermark = 50.0
+os_memory_check_interval_ms = 60
+os_memory_high_watermark = 80.0
+
+[offline_messages]
+enable = true
+expire_ms = 3600
+max_messages_num = 1000
 
 [storage]
 storage_type = "memory"
 
 [log]
-log_config = "./config/log-config/mqtt-log4rs.yaml"
-log_path = "./robust-data-test/mqtt-broker-1/logs"
-
-[telemetry]
-enable = false
-exporter_type = "otlp"
-exporter_endpoint = "grpc://127.0.0.1:4317"
+log_config = "./example/mqtt-cluster/mqtt-server/log/mqtt-tracing-1.toml"
+log_path = "./data/mqtt-broker-1/logs"
