--- a/src/common/base/Cargo.toml
+++ b/src/common/base/Cargo.toml
@@ -54,7 +54,7 @@ apache-avro.workspace = true
 crc32fast.workspace = true
 tempfile.workspace = true
 temp-env.workspace = true
-
+chrono.workspace = true
 # A custom cfg for enabling tokio-console in tracing-subscriber
 # Enable this by running with `RUSTFLAGS="--cfg tokio_console"`
 [lints.rust]
