--- a/src/mqtt-broker/Cargo.toml
+++ b/src/mqtt-broker/Cargo.toml
@@ -40,30 +40,24 @@ grpc-clients.workspace = true
 metadata-struct.workspace = true
 third-driver.workspace = true
 regex.workspace = true
-placement-center.workspace = true
 futures-util.workspace = true
 axum-extra.workspace = true
 axum-server.workspace = true
 rustls-pemfile.workspace = true
 tokio-rustls.workspace = true
 mysql.workspace = true
-paho-mqtt.workspace = true
 tracing.workspace = true
 ipnet.workspace = true
 os_info.workspace = true
-bincode.workspace = true
 grep.workspace = true
 delay-message.workspace = true
 schema-register.workspace = true
 # observability
-prometheus.workspace = true
 prometheus-client.workspace = true
-opentelemetry.workspace = true
 quinn.workspace = true
 rcgen.workspace = true
 rustls-pki-types.workspace = true
 rustls.workspace = true
-bindgen.workspace = true
 rdkafka.workspace = true
 pprof-monitor.workspace = true
 humantime.workspace = true
@@ -72,6 +66,7 @@ tracing-appender.workspace = true
 chrono.workspace = true
 strum.workspace = true
 strum_macros.workspace = true
+async-stream.workspace = true
 
 [dev-dependencies]
 # test
