--- a/config/log-config/place-tracing.toml
+++ b/config/log-config/place-tracing.toml
@@ -13,13 +13,13 @@
 # limitations under the License.
 
 [stdout]
-kind = "Console"
-level = "Info"
+kind = "console"
+level = "info"
 
 [server]
-kind = "RollingFile"
-level = "Info"
-rotation = "Daily"
+kind = "rolling_file"
+level = "info"
+rotation = "daily"
 directory = "./data/placement-center/logs"
 prefix = "server"
 suffix = "log"
