chore: synchronize new configuration in single-cluster and remove lint allow rules
Signed-off-by: shyunny <shyunny@outlook.com>

--- a/example/single-mqtt-cluster/journal-server/journal-tracing.toml
+++ b/example/single-mqtt-cluster/journal-server/journal-tracing.toml
@@ -13,14 +13,14 @@
 # limitations under the License.
 
 [stdout]
-kind = "Console"
-level = "Info"
-formatter = "Json"
+kind = "console"
+level = "info"
+formatter = "json"
 
 [server]
-kind = "RollingFile"
-level = "Info"
-rotation = "Minutely"
+kind = "rolling_file"
+level = "info"
+rotation = "minutely"
 directory = "./logs"
 prefix = "journal-server-"
 suffix = "log"
