feat: Development of codec for the Kafka protocol (#1291)
* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

---------

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>
Co-authored-by: wenqiang.xu <wenqiang.xu@okg.com>

--- a/src/protocol/Cargo.toml
+++ b/src/protocol/Cargo.toml
@@ -30,10 +30,11 @@ tokio-util.workspace = true
 bincode.workspace = true
 tokio.workspace = true
 futures.workspace = true
-common-base.workspace =true
-serde.workspace =true
+common-base.workspace = true
+serde.workspace = true
 validator.workspace = true
 prost-validate = { workspace = true, features = ["derive"] }
+kafka-protocol = "0.15.1"
 
 [dev-dependencies]
 robustmq-test.workspace = true
