--- a/src/broker/Cargo.toml
+++ b/src/broker/Cargo.toml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 [package]
-name = "idempotent-message"
+name = "broker-server"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
@@ -23,11 +23,3 @@ license.workspace = true
 bytes.workspace = true
 axum.workspace = true
 thiserror.workspace = true
-common-base.workspace = true
-storage-adapter.workspace = true
-metadata-struct.workspace = true
-dashmap.workspace = true
-tokio.workspace = true
-tokio-util.workspace = true
-tracing.workspace = true
-futures.workspace = true
