--- a/config/server.toml
+++ b/config/server.toml
@@ -12,37 +12,15 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-cluster_name = "placement-test"
-
-[node]
-node_id = 1
-nodes = { 1 = "127.0.0.1:1228" }
-
-[network]
-local_ip = "127.0.0.1"
+cluster_name = "broker-server"
+broker_id = 1
+roles = ["place", "broker"]
 grpc_port = 1228
-http_port = 1227
-grpc_max_decoding_message_size = 268435456
-
-[system]
-runtime_work_threads = 100
-
-[heartbeat]
-heartbeat_timeout_ms = 5000
-heartbeat_check_time_ms = 1000
-
-[prometheus]
-enable = true
-model = "pull"
-port = 9090
-push_gateway_server = "127.0.0.1:8081"
-interval = 10
-header = ""
-
-[rocksdb]
-data_path = "./data/placement-center/data"
-max_open_files = 10000
+placement_center = { 1 = "127.0.0.1:1228" }
 
 [log]
-log_config = "./config/log-config/place-tracing.toml"
-log_path = "./data/placement-center/logs"
+log_config = "./config/server-tracing.toml"
+log_path = "./data/broker/logs"
+
+[rocksdb]
+data_path = "./data/broker/data"
