--- a/config/server.toml
+++ b/config/server.toml
@@ -18,9 +18,10 @@ roles = ["place", "broker"]
 grpc_port = 1228
 placement_center = { 1 = "127.0.0.1:1228" }
 
+[rocksdb]
+data_path = "./data/broker/data"
+max_open_files = 10000
+
 [log]
 log_config = "./config/server-tracing.toml"
 log_path = "./data/broker/logs"
-
-[rocksdb]
-data_path = "./data/broker/data"
