--- a/src/broker/Cargo.toml
+++ b/src/broker/Cargo.toml
@@ -23,3 +23,19 @@ license.workspace = true
 bytes.workspace = true
 axum.workspace = true
 thiserror.workspace = true
+mqtt-broker.workspace = true
+placement-center.workspace = true
+tonic.workspace = true
+tower-http = { workspace = true, features = ["cors"] }
+tonic-web.workspace = true
+tokio.workspace = true
+common-base.workspace = true
+tower.workspace = true
+protocol.workspace = true
+common-config.workspace = true
+openraft.workspace = true
+grpc-clients.workspace = true
+tracing-appender.workspace = true
+delay-message.workspace = true
+schema-register.workspace = true
+tracing.workspace = true
