--- a/src/broker/Cargo.toml
+++ b/src/broker/Cargo.toml
@@ -40,3 +40,4 @@ delay-message.workspace = true
 schema-register.workspace = true
 tracing.workspace = true
 serde_json.workspace = true
+journal-server.workspace = true
