--- a/src/common/base/Cargo.toml
+++ b/src/common/base/Cargo.toml
@@ -56,7 +56,7 @@ tempfile.workspace = true
 temp-env.workspace = true
 chrono.workspace = true
 chrono-tz.workspace = true
-anyhow = "1.0.98"
+anyhow.workspace = true
 
 # A custom cfg for enabling tokio-console in tracing-subscriber
 # Enable this by running with `RUSTFLAGS="--cfg tokio_console"`
