--- a/Cargo.toml
+++ b/Cargo.toml
@@ -148,7 +148,7 @@ protobuf = "3.7.1"
 protobuf-codegen = "3.7.1"
 protofish = { version = "0.5.2" }
 rdkafka-sys = "4.8.0"
-rdkafka = { version = "0.37.0" }
+rdkafka = { version = "0.37.0", features = ["cmake-build"] }
 crc32fast = "1.4.2"
 console-subscriber = "0.4.1"
 
