--- a/_typos.toml
+++ b/_typos.toml
@@ -19,6 +19,7 @@
 # This words is a spelling error for paho-mqtt package.
 # we need to ignore it.
 Identifer = "Identifer"
+mosquitto ="mosquitto"
 
 
 [files]
