feat: Implement robustmq operator and dockerfile (#1320)
* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

* dev

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>

---------

Signed-off-by: wenqiang.xu <wenqiang.xu@okg.com>
Co-authored-by: wenqiang.xu <wenqiang.xu@okg.com>

--- a/_typos.toml
+++ b/_typos.toml
@@ -19,7 +19,8 @@
 # This words is a spelling error for paho-mqtt package.
 # we need to ignore it.
 Identifer = "Identifer"
+mosquitto ="mosquitto"
 
 
 [files]
-extend-exclude = []
+extend-exclude = ["/operator/*"]
