--- a/config/server.toml
+++ b/config/server.toml
@@ -14,7 +14,7 @@
 
 cluster_name = "broker-server"
 broker_id = 1
-roles = ["meta", "broker", "journal"]
+roles = ["meta", "broker"]
 grpc_port = 1228
 placement_center = { 1 = "127.0.0.1:1228" }
 
