--- a/Cargo.toml
+++ b/Cargo.toml
@@ -131,6 +131,7 @@ snowflake = "1.3.0"
 rumqttc = "0.24.0"
 paho-mqtt = { version = "0.13.3", default-features = false, features = [
     "bundled",
+    "ssl"
 ] }
 ipnet = "2.3.0"
 os_info = "3.8.2"
