--- a/src/broker/Cargo.toml
+++ b/src/broker/Cargo.toml
@@ -41,3 +41,4 @@ schema-register.workspace = true
 tracing.workspace = true
 serde_json.workspace = true
 journal-server.workspace = true
+pprof-monitor.workspace = true
