--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ members = [
     "src/common/rocksdb-engine",
     "src/common/metadata-struct",
     "src/common/third-driver",
+    "src/common/network-server",
     "src/protocol",
     "src/journal-server",
     "src/journal-client",
@@ -175,6 +176,7 @@ common-config = { path = "src/common/config" }
 rocksdb-engine = { path = "src/common/rocksdb-engine" }
 metadata-struct = { path = "src/common/metadata-struct" }
 third-driver = { path = "src/common/third-driver" }
+network-server = { path = "src/common/network-server" }
 protocol = { path = "src/protocol" }
 robustmq-test = { path = "tests" }
 robustmq-proto-build = { git = "https://github.com/robustmq/robustmq-proto.git", branch = "main" }
