--- a/src/common/base/Cargo.toml
+++ b/src/common/base/Cargo.toml
@@ -57,6 +57,7 @@ temp-env.workspace = true
 chrono.workspace = true
 chrono-tz.workspace = true
 anyhow.workspace = true
+quinn.workspace = true
 
 # A custom cfg for enabling tokio-console in tracing-subscriber
 # Enable this by running with `RUSTFLAGS="--cfg tokio_console"`
