--- a/Cargo.toml
+++ b/Cargo.toml
@@ -32,6 +32,7 @@ members = [
     "src/common/metadata-struct",
     "src/common/third-driver",
     "src/common/network-server",
+    "src/common/observability",
     "src/protocol",
     "src/journal-server",
     "src/journal-client",
@@ -177,6 +178,7 @@ rocksdb-engine = { path = "src/common/rocksdb-engine" }
 metadata-struct = { path = "src/common/metadata-struct" }
 third-driver = { path = "src/common/third-driver" }
 network-server = { path = "src/common/network-server" }
+observability = { path = "src/common/observability" }
 protocol = { path = "src/protocol" }
 robustmq-test = { path = "tests" }
 robustmq-proto-build = { git = "https://github.com/robustmq/robustmq-proto.git", branch = "main" }
