--- a/src/common/observability/Cargo.toml
+++ b/src/common/observability/Cargo.toml
@@ -13,20 +13,19 @@
 # limitations under the License.
 
 [package]
-name = "metadata-struct"
+name = "observability"
 version.workspace = true
 edition.workspace = true
 license.workspace = true
 
 [dependencies]
-thiserror.workspace = true
-serde.workspace = true
-common-base.workspace = true
-common-config.workspace = true
-serde_json.workspace = true
-protocol.workspace = true
+tokio.workspace = true
+pprof.workspace = true
+hyper.workspace = true
+axum.workspace = true
 bytes.workspace = true
 tracing.workspace = true
-dashmap.workspace = true
-crc32fast.workspace = true
-tokio.workspace = true
+common-base.workspace = true
+prometheus-client.workspace = true
+protocol.workspace = true
+metadata-struct.workspace = true
