--- a/src/mqtt-broker/Cargo.toml
+++ b/src/mqtt-broker/Cargo.toml
@@ -67,6 +67,7 @@ chrono.workspace = true
 strum.workspace = true
 strum_macros.workspace = true
 async-stream.workspace = true
+network-server.workspace = true
 
 [dev-dependencies]
 # test
