--- a/src/common/network-server/Cargo.toml
+++ b/src/common/network-server/Cargo.toml
@@ -33,3 +33,4 @@ quinn.workspace = true
 bytes.workspace = true
 observability.workspace = true
 metadata-struct.workspace = true
+grpc-clients.workspace = true
