--- a/src/mqtt-broker/Cargo.toml
+++ b/src/mqtt-broker/Cargo.toml
@@ -68,6 +68,7 @@ strum.workspace = true
 strum_macros.workspace = true
 async-stream.workspace = true
 network-server.workspace = true
+observability.workspace = true
 
 [dev-dependencies]
 # test
