--- a/src/common/network-server/Cargo.toml
+++ b/src/common/network-server/Cargo.toml
@@ -34,3 +34,6 @@ bytes.workspace = true
 observability.workspace = true
 metadata-struct.workspace = true
 grpc-clients.workspace = true
+futures-util.workspace = true
+rustls-pemfile.workspace = true
+common-config.workspace = true
